[FIX] Content out of box with big img

--- a/theme/default/styles.css
+++ b/theme/default/styles.css
@@ -398,6 +398,7 @@ code{
 #content{
     flex-shrink: 3;
     flex-grow: 1;
+    max-width: 100%;
 }
 
 #body-page {
